--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@
     box-sizing: border-box;
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+::-webkit-scrollbar{
+    width: 0px;
+}
 html,body{
     height: 100vh;
     width: 100vw;
@@ -43,7 +46,8 @@ iframe{
 section#logos{
     height: 100vh;
     display: grid;
-    margin-right: 20px;
+
+    margin: 0px 20px 0px 20px;
 
     align-content: space-around;
     justify-items: end;
